clickhouse-k8s/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - image: signoz/frontend:0.4.1
          name: frontend
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              name: frontend-cm0
              subPath: default.conf
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: nginx-config.conf
                path: default.conf
            name: frontend-cm0
          name: frontend-cm0
status: {}
